<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.sipgate</groupId>
    <artifactId>sparta-diameter</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>sparta-diameter</name>
    <description>Java library for the Diameter protocol by sipgate</description>
    <url>https://github.com/sipgate/sparta-diameter</url>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>takuto88</id>
            <name>Lennart Rosam</name>
            <email>rosam@sipgate.de</email>
        </developer>
    </developers>
    <scm>
        <url>https://github.com/sipgate/sparta-diameter</url>
        <connection>scm:git:git://github.com/sipgate/sparta-diameter.git</connection>
        <developerConnection>scm:git:ssh://github.com:sipgate/sparta-diameter.git</developerConnection>
    </scm>

    <modules>
        <module>sparta-diameter-base</module>
        <module>sparta-diameter-ietf-drmp</module>
        <module>sparta-diameter-3gpp-common</module>
        <module>sparta-diameter-3gpp-s6c</module>
        <module>sparta-diameter-3gpp-sgdgdd</module>
        <module>sparta-diameter-3gpp-s6a</module>
        <module>sparta-diameter-3gpp-cxdx</module>
    </modules>

    <properties>
        <revision>0.1.0-SNAPSHOT</revision>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.reflections</groupId>
                <artifactId>reflections</artifactId>
                <version>0.10.2</version>
            </dependency>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>4.2.10.Final</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>6.0.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.27.7</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>5.23.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.sipgate</groupId>
                <artifactId>sparta-diameter-base</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sipgate</groupId>
                <artifactId>sparta-diameter-ietf-drmp</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sipgate</groupId>
                <artifactId>sparta-diameter-3gpp-common</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
